Update and rename 0.4.md to part0/0.4.md
correst form of diagram

--- a/part0/0.4.md
+++ b/part0/0.4.md
@@ -5,6 +5,13 @@ sequenceDiagram
 
     Note right of browser: Since the browser is sent text and later is clicked the botton. 
     Note right of browser: Text --> "Hello world"
+
+    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
+    activate server
+    server-->>browser: HTML document (Reload the page)
+    deactivate server
+
+
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
     activate server
     server-->>browser: HTML document
